--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -45,6 +47,8 @@
     ]
   },
   "devDependencies": {
-    "@types/react-dom": "^18.0.10"
-  }
+    "@types/react-dom": "^18.0.10",
+    "gh-pages": "^5.0.0"
+  },
+  "homepage": "https://kenyihq.github.io/aeroalarm"
 }
