--- a/package.json
+++ b/package.json
@@ -50,5 +50,5 @@
     "@types/react-dom": "^18.0.10",
     "gh-pages": "^5.0.0"
   },
-  "homepage": "https://kenyihq.github.io/aeroalarm"
+  "homepage": "https://kenyihq.github.io/project-aeroalarm-silabuz/"
 }
